--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.5"
-  }
+    "pg": "^8.11.5",
+    "swagger": "^0.7.5",
+    "swagger-ui": "^5.17.12",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "description": ""
 }
